--- a/trunk/libs/libusb-1.0/libusb-1.0.8/Makefile.in
+++ b/trunk/libs/libusb-1.0/libusb-1.0.8/Makefile.in
@@ -295,10 +295,7 @@ $(top_builddir)/config.status: $(top_srcdir)/configure $(CONFIG_STATUS_DEPENDENC
 	$(SHELL) ./config.status --recheck
 
 $(top_srcdir)/configure:  $(am__configure_deps)
-	$(am__cd) $(srcdir) && $(AUTOCONF)
-$(ACLOCAL_M4):  $(am__aclocal_m4_deps)
-	$(am__cd) $(srcdir) && $(ACLOCAL) $(ACLOCAL_AMFLAGS)
-$(am__aclocal_m4_deps):
+	$(am__cd) $(srcdir)
 
 config.h: stamp-h1
 	@if test ! -f $@; then \
