linux kernel: update to wive-rtnl 2.5.0

--- a/trunk/linux-2.6.21.x/init/Kconfig
+++ b/trunk/linux-2.6.21.x/init/Kconfig
@@ -652,7 +652,7 @@ config SLAB
 	  a slab allocator.
 
 config SLUB
-	depends on EXPERIMENTAL && !ARCH_USES_SLAB_PAGE_STRUCT
+	depends on !ARCH_USES_SLAB_PAGE_STRUCT
 	bool "SLUB (Unqueued Allocator)"
 	help
 	   SLUB is a slab allocator that minimizes cache line usage
