--- a/trunk/configs/IPv4/kernel.config
+++ b/trunk/configs/IPv4/kernel.config
@@ -1566,7 +1566,8 @@ CONFIG_RALINK_RT3662_2T2R=y
 CONFIG_RT2860V2_AP=m
 CONFIG_RT2860V2_AP_V24_DATA_STRUCTURE=y
 CONFIG_RT2860V2_AP_LED=y
-# CONFIG_RT2860V2_AP_WSC is not set
+CONFIG_RT2860V2_AP_WSC=y
+# CONFIG_RT2860V2_AP_WIN7PREVIEW is not set
 CONFIG_RT2860V2_AP_LLTD=y
 CONFIG_RT2860V2_AP_WDS=y
 CONFIG_RT2860V2_AP_WMM_ACM=y
@@ -1602,7 +1603,7 @@ CONFIG_RT2860V2_AP_ATE=y
 # AP MODE Ralink PCIe RT309X wireless driver
 #
 CONFIG_RT3090_AP=m
-# CONFIG_RT3090_AP_WSC is not set
+CONFIG_RT3090_AP_WSC=y
 CONFIG_RT3090_AP_LLTD=y
 CONFIG_RT3090_AP_WDS=y
 CONFIG_RT3090_AP_WMM_ACM=y
