--- a/trunk/linux-2.6.21.x/arch/mips/Kconfig
+++ b/trunk/linux-2.6.21.x/arch/mips/Kconfig
@@ -153,6 +153,10 @@ config GENERIC_CALIBRATE_DELAY
 	bool
 	default y
 
+config GENERIC_CMOS_UPDATE
+	bool
+	default y
+
 config GENERIC_TIME
 	bool
 	default y
