--- a/trunk/configs/IPv6/kernel.ram.config
+++ b/trunk/configs/IPv6/kernel.ram.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux kernel version: 2.6.21.14
+# Linux kernel version: 2.6.21.15
 # Sun Apr 15 00:04:27 2012
 #
 CONFIG_MIPS=y
@@ -41,6 +41,7 @@ CONFIG_RWSEM_GENERIC_SPINLOCK=y
 CONFIG_GENERIC_FIND_NEXT_BIT=y
 CONFIG_GENERIC_HWEIGHT=y
 CONFIG_GENERIC_CALIBRATE_DELAY=y
+CONFIG_GENERIC_CMOS_UPDATE=y
 CONFIG_GENERIC_TIME=y
 # CONFIG_GENERIC_HARDIRQS_NO__DO_IRQ is not set
 CONFIG_DMA_NONCOHERENT=y
@@ -1617,7 +1618,6 @@ CONFIG_GE2_RGMII_FORCE_1000=y
 # CONFIG_GE2_RGMII_AN is not set
 CONFIG_MAC_TO_MAC_MODE=y
 # CONFIG_RAETH_SNMPD is not set
-# CONFIG_RAETH_DHCP_TOUCH is not set
 CONFIG_RAETH_READ_MAC_FROM_MTD=y
 # CONFIG_RAETH_MEMORY_OPTIMIZATION is not set
 # CONFIG_RAETH_ACCEPT_OVERSIZED is not set
