--- a/trunk/configs/IPv6/kernel.config
+++ b/trunk/configs/IPv6/kernel.config
@@ -109,7 +109,7 @@ CONFIG_FLAT_NODE_MEM_MAP=y
 CONFIG_SPLIT_PTLOCK_CPUS=4
 CONFIG_OOM_EMBEDDED=y
 # CONFIG_OOM_EMBEDDED_REBOOT is not set
-# CONFIG_DELAY_OOM is not set
+CONFIG_DELAY_OOM=y
 # CONFIG_RESOURCES_64BIT is not set
 CONFIG_ZONE_DMA_FLAG=0
 CONFIG_HAVE_GET_USER_PAGES_FAST=y
