rc: LTE rework code for support any RNDIS modems

--- a/trunk/user/rc/Makefile
+++ b/trunk/user/rc/Makefile
@@ -165,6 +165,7 @@ romfs:
 	cd $(INSTALLDIR)/sbin && ln -sf rc asus_sd
 	cd $(INSTALLDIR)/sbin && ln -sf rc asus_sg
 	cd $(INSTALLDIR)/sbin && ln -sf rc asus_sr
+	cd $(INSTALLDIR)/sbin && ln -sf rc asus_net
 	cd $(INSTALLDIR)/sbin && ln -sf rc asus_tty
 	cd $(INSTALLDIR)/sbin && ln -sf rc asus_usb_interface ;
 	if [ "$(CONFIG_FIRMWARE_INCLUDE_MINIDLNA)" = "y" ] ; then \
