rtl8367 switch: update driver, update user-mode, fixed vlans for ISP tagged traffic, support single PHY mode by VLAN1/2

--- a/trunk/configs/IPv4/kernel.ram.config
+++ b/trunk/configs/IPv4/kernel.ram.config
@@ -790,6 +790,19 @@ CONFIG_TUN=y
 # PHY multiport switches
 #
 CONFIG_RTL8367M=y
+CONFIG_RTL8367M_ASIC_MVB=y
+# CONFIG_RTL8367M_ASIC_RVB is not set
+# CONFIG_RTL8367M_ASIC_MB is not set
+# CONFIG_RTL8367M_ASIC_RB is not set
+CONFIG_RTL8367M_SMI_BUS_CPU_GPIO_DATA=1
+CONFIG_RTL8367M_SMI_BUS_CPU_GPIO_CLCK=2
+CONFIG_RTL8367M_PORT_WAN=4
+CONFIG_RTL8367M_PORT_LAN1=3
+CONFIG_RTL8367M_PORT_LAN2=2
+CONFIG_RTL8367M_PORT_LAN3=1
+CONFIG_RTL8367M_PORT_LAN4=0
+CONFIG_RTL8367M_RGMII_DELAY_TX=1
+CONFIG_RTL8367M_RGMII_DELAY_RX=1
 
 #
 # Ethernet (10 or 100Mbit)
