--- a/trunk/user/detectWAN/Makefile
+++ b/trunk/user/detectWAN/Makefile
@@ -1,7 +1,14 @@
+
+-include $(LINUX_CONFIG)
+
 SHDIR = $(ROOTDIR)/user/shared
 USERDIR = $(ROOTDIR)/user
 
+PHYMAC = $(if $(CONFIG_RAETH_GMAC2),,-DUSE_SINGLE_MAC)
+
 CFLAGS  += -Wall -DASUS_NVRAM -I. -I$(SHDIR)/include -I$(SHDIR)
+CFLAGS  += $(PHYMAC)
+
 LDFLAGS += -L$(SHDIR) -lshared
 
 all: detectWan
