--- a/trunk/user/rc/Makefile
+++ b/trunk/user/rc/Makefile
@@ -21,10 +21,12 @@ HTTPDIR = $(ROOTDIR)/user/httpd
 INSTALLDIR = $(ROOTDIR)/romfs
 
 FWBLDV = $(if $(CONFIG_FIRMWARE_BUILDS_VER),-DFWBLDSTR=\"$(CONFIG_FIRMWARE_BUILDS_VER)\",)
+PHYMAC = $(if $(CONFIG_RAETH_GMAC2),,-DUSE_SINGLE_MAC)
 
 CFLAGS += -s -DASUS_NVRAM -DRPPPPOE -DBTN_SETUP -DWL500GP -DDHCP_PPTP -DASUS_EXT -DASUS_DDNS -DGUEST_ACCOUNT -DWEBSTRFILTER -DUSB_SUPPORT -DU2EC -DDLM -DPRINTER_SUPPORT -DCONTENTFILTER
 CFLAGS += -I. -I$(SHDIR) -I$(SHDIR)/include -I$(HTTPDIR)
 CFLAGS += $(FWBLDV)
+CFLAGS += $(PHYMAC)
 
 # disable WSC
 #CFLAGS += -DWSC
