--- a/trunk/user/utils/hw_nat/Makefile
+++ b/trunk/user/utils/hw_nat/Makefile
@@ -4,12 +4,12 @@ HWNAT_OBJS = hw_nat.o hwnat_api.o util.o
 AC_OBJS = ac.o ac_api.o util.o
 ACL_OBJS = acl.o acl_api.o util.o
 MTR_OBJS = mtr.o mtr_api.o util.o
-
+CONF_H  = $(ROOTDIR)/$(LINUXDIR)/include/linux/autoconf.h
 CFLAGS += -I$(ROOTDIR)/$(LINUXDIR)/net/nat/hw_nat 
 
 all: $(EXEC)
 
-hw_nat: $(HWNAT_OBJS)
+hw_nat: $(HWNAT_OBJS) $(CONF_H)
 	$(CC) $(LDFLAGS) -o $@ $(HWNAT_OBJS) 
 
 acl: $(ACL_OBJS)
@@ -23,6 +23,11 @@ mtr: $(MTR_OBJS)
 
 romfs:
 	$(ROMFSINST) /bin/hw_nat
+#	$(ROMFSINST) /bin/acl
+#	$(ROMFSINST) /bin/ac
+#	$(ROMFSINST) /bin/mtr
 
 clean:
 	-rm -f $(EXEC) *.elf *.gdb *.o
+
+
