rt3090_ap: add spinlock for hwnat rx/tx hooks

--- a/trunk/configs/IPv6/kernel.ram.config
+++ b/trunk/configs/IPv6/kernel.ram.config
@@ -1712,6 +1712,7 @@ CONFIG_RT3090_AP_IGMP_SNOOP=y
 # CONFIG_RT3090_AP_NETIF_BLOCK is not set
 CONFIG_RT3090_AP_DLS=y
 # CONFIG_RT3090_80211N_DRAFT3 is not set
+CONFIG_RT3090_AP_READ_MAC_FROM_MTD=y
 CONFIG_RT3090_AP_BRIDGE_FASTPATH=y
 CONFIG_RT3090_AP_ATE=y
 CONFIG_RALINK_RT3090_AP_DBG=y
