--- a/trunk/patches/rt3883-wifi/linux-2.6.21.x/drivers/net/wireless/rt3090_ap/Makefile
+++ b/trunk/patches/rt3883-wifi/linux-2.6.21.x/drivers/net/wireless/rt3090_ap/Makefile
@@ -160,6 +160,10 @@ EXTRA_CFLAGS += -DRSSI_FEEDBACK
 # Disable HW_NAT TX/RX offload
 #EXTRA_CFLAGS += -DCONFIG_RA_NAT_NONE
 
+ifeq ($(CONFIG_RT3090_AP_READ_MAC_FROM_MTD),y)
+EXTRA_CFLAGS += -DREAD_MAC_FROM_EEPROM
+endif
+
 ifeq ($(CONFIG_RALINK_RT3090_AP_DBG),y)
 EXTRA_CFLAGS += -DDBG
 EXTRA_CFLAGS += -DRELASE_EXCLUDE
