rt3090_ap: code cleanup

--- a/trunk/configs/IPv4/kernel.ram.config
+++ b/trunk/configs/IPv4/kernel.ram.config
@@ -1666,6 +1666,7 @@ CONFIG_RALINK_RT2880_AP_DBG=y
 # AP MODE Ralink PCIe RT309X wireless driver
 #
 CONFIG_RT3090_AP=m
+CONFIG_RT3090_AP_LED=y
 CONFIG_RT3090_AP_WSC=y
 CONFIG_RT3090_AP_LLTD=y
 CONFIG_RT3090_AP_WDS=y
@@ -1674,10 +1675,12 @@ CONFIG_RT3090_AP_MBSS=y
 CONFIG_RT3090_AP_IGMP_SNOOP=y
 # CONFIG_RT3090_AP_NETIF_BLOCK is not set
 CONFIG_RT3090_AP_DLS=y
-# CONFIG_RT3090_80211N_DRAFT3 is not set
+CONFIG_RT3090_AP_AUTO_CH_SELECT_ENHANCE=y
+# CONFIG_RT3090_AP_80211N_DRAFT3 is not set
+CONFIG_RT3090_AP_MCAST_RATE_SPECIFIC=y
 CONFIG_RT3090_AP_READ_MAC_FROM_MTD=y
 CONFIG_RT3090_AP_BRIDGE_FASTPATH=y
-CONFIG_RT3090_AP_ATE=y
+# CONFIG_RT3090_AP_ATE is not set
 CONFIG_RALINK_RT3090_AP_DBG=y
 
 #
