--- a/trunk/linux-2.6.21.x/drivers/net/wireless/rt3090_ap/Makefile
+++ b/trunk/linux-2.6.21.x/drivers/net/wireless/rt3090_ap/Makefile
@@ -76,10 +76,6 @@ rt3090_ap-objs += ../rt3090/common/crypt_dh.o
 rt3090_ap-objs += ../rt3090/common/wsc_ufd.o
 endif
 
-#ifeq ($(CONFIG_RT3090_AP_NINTENDO),y)
-#rt3090_ap-objs += ../rt3090/ap/ap_nintendo.o
-#endif
-
 ifeq ($(CONFIG_RT3090_AP_WDS),y)
 rt3090_ap-objs += ../rt3090/ap/ap_wds.o
 rt3090_ap-objs += ../rt3090/ap/ap_wds_inf.o
@@ -143,22 +139,18 @@ endif
 
 ###################
 #  CFLAGS
-#  ##################
+###################
 EXTRA_CFLAGS += -DAGGREGATION_SUPPORT -DPIGGYBACK_SUPPORT -DWMM_SUPPORT -DLINUX
 EXTRA_CFLAGS += -DCONFIG_AP_SUPPORT -DAP_SCAN_SUPPORT -DUAPSD_AP_SUPPORT -DDOT11_N_SUPPORT -DDOT1X_SUPPORT -DSTATS_COUNT_SUPPORT
 EXTRA_CFLAGS += -DRTMP_MAC_PCI -DRT30xx -DRT3090 -DRTMP_PCI_SUPPORT -DRTMP_RF_RW_SUPPORT -DRTMP_EFUSE_SUPPORT -DRTMP_FLASH_SUPPORT
-
-#-DOS_ABL_SUPPORT
-
-# ASUS EXT
-EXTRA_CFLAGS += -DIAPP_SUPPORT
-EXTRA_CFLAGS += -DLED_CONTROL_SUPPORT
-EXTRA_CFLAGS += -DMCAST_RATE_SPECIFIC
-EXTRA_CFLAGS += -DAUTO_CH_SELECT_ENHANCE
 EXTRA_CFLAGS += -DRSSI_FEEDBACK
 
-# Disable HW_NAT TX/RX offload
+
+# disable HW_NAT TX/RX offload
 #EXTRA_CFLAGS += -DCONFIG_RA_NAT_NONE
+
+# provide roaming
+#EXTRA_CFLAGS += -DIAPP_SUPPORT
 
 ifeq ($(CONFIG_RT3090_AP_READ_MAC_FROM_MTD),y)
 EXTRA_CFLAGS += -DREAD_MAC_FROM_EEPROM
@@ -185,7 +177,15 @@ endif
 #EXTRA_CFLAGS   += -DRT3XXX_ANTENNA_DIVERSITY_SUPPORT
 #endif
 
-ifeq ($(CONFIG_RT3090_80211N_DRAFT3),y)
+ifeq ($(CONFIG_RT3090_AP_AUTO_CH_SELECT_ENCANCE),y)
+EXTRA_CFLAGS += -DAUTO_CH_SELECT_ENHANCE
+endif
+
+ifeq ($(CONFIG_RT3090_AP_MCAST_RATE_SPECIFIC),y)
+EXTRA_CFLAGS += -DMCAST_RATE_SPECIFIC
+endif
+
+ifeq ($(CONFIG_RT3090_AP_80211N_DRAFT3),y)
 EXTRA_CFLAGS += -DDOT11N_DRAFT3
 endif
 
@@ -193,13 +193,13 @@ ifeq ($(CONFIG_RT3090_AP_WMM_ACM),y)
 EXTRA_CFLAGS += -DWMM_ACM_SUPPORT
 endif
 
+ifeq ($(CONFIG_RT3090_AP_LED),y)
+EXTRA_CFLAGS += -DLED_CONTROL_SUPPORT
+endif
+
 ifeq ($(CONFIG_RT3090_AP_WSC),y)
 EXTRA_CFLAGS += -DWSC_AP_SUPPORT
 endif
-
-#ifeq ($(CONFIG_RT3090_AP_NINTENDO),y)
-#EXTRA_CFLAGS += -DNINTENDO_AP
-#endif
 
 ifeq ($(CONFIG_RT3090_AP_LLTD),y)
 EXTRA_CFLAGS += -DLLTD_SUPPORT
