--- a/trunk/linux-2.6.21.x/drivers/net/wireless/rt3090_ap/Kconfig
+++ b/trunk/linux-2.6.21.x/drivers/net/wireless/rt3090_ap/Kconfig
@@ -1,7 +1,11 @@
 config RT3090_AP
 	tristate "Ralink RT3090 802.11n AP support"
-	depends on NET_RADIO 
-	
+	depends on NET_RADIO
+
+config  RT3090_AP_LED
+	bool "LED Support"
+	depends on RT3090_AP
+
 config  RT3090_AP_WSC
 	bool "WSC (WiFi Simple Config)"
 	depends on RT3090_AP
@@ -14,7 +18,6 @@ config  RT3090_AP_WDS
 	bool "WDS"
 	depends on RT3090_AP
 
-# ASUS EXT
 config  RT3090_AP_WMM_ACM
 	bool "WMM ACM"
 	depends on RT3090_AP
@@ -55,12 +58,22 @@ config  RT3090_AP_DLS
 #	bool "IDS (Intrusion Detection System) Support"
 #	depends on RT3090_AP
 
-config  RT3090_80211N_DRAFT3
+config  RT3090_AP_AUTO_CH_SELECT_ENHANCE
+	bool "Auto Channel Selection Enhancement"
+	default y
+	depends on RT3090_AP
+
+config  RT3090_AP_80211N_DRAFT3
 	bool "802.11n Draft3"
 	depends on RT3090_AP
 
+config  RT3090_AP_MCAST_RATE_SPECIFIC
+	bool "User specific TX rate of mcast packets"
+	default y
+	depends on RT3090_AP
+
 config  RT3090_AP_READ_MAC_FROM_MTD
-	bool "Read and set MAC from MTD/EEPROM."
+	bool "Read and set MAC from MTD/EEPROM"
 	default y
 	depends on RT3090_AP
 
@@ -71,9 +84,9 @@ config  RT3090_AP_BRIDGE_FASTPATH
 config  RT3090_AP_ATE
 	bool "Provide ATE+QA testmode commands support"
 	depends on RT3090_AP
-	default y
+	default n
 
-config RALINK_RT3090_AP_DBG
-        bool "Debug support for AP mode"
+config  RALINK_RT3090_AP_DBG
+	bool "Debug support for AP mode"
 	default n
 	depends on RT3090_AP
