--- a/trunk/linux-2.6.21.x/drivers/net/wireless/rt2860v2_sta/Kconfig
+++ b/trunk/linux-2.6.21.x/drivers/net/wireless/rt2860v2_sta/Kconfig
@@ -1,6 +1,6 @@
 config RT2860V2_STA
 	tristate "Ralink RT2860 802.11n STA support"
-	depends on NET_RADIO 
+	depends on NET_RADIO
 
 config  RT2860V2_STA_WPA_SUPPLICANT
 	bool "WPA Supplicant"
@@ -41,7 +41,7 @@ config  RT2860V2_STA_DLS
 	bool "DLS ((Direct-Link Setup) Support"
 	depends on RT2860V2_STA
 
-config  RT2860V2_RT3XXX_STA_ANTENNA_DIVERSITY
+config  RT2860V2_STA_ANTENNA_DIVERSITY
 	bool "Antenna Diversity Support"
 	depends on RT2860V2_STA
 
@@ -52,14 +52,14 @@ config  RT2860V2_STA_VIDEO_TURBINE
 config  RT2860V2_STA_INTELLIGENT_RATE_ADAPTION
 	bool "Intelligent Rate Adaption"
 	depends on RT2860V2_STA
-	depends on RALINK_RT2883 || RALINK_RT3883 
+	depends on RALINK_RT2883 || RALINK_RT3883
 
 config  RT2860V2_STA_TXBF
 	bool "Tx Bean Forming Support (Only 3883)"
 	depends on RT2860V2_STA
-	depends on RALINK_RT2883 || RALINK_RT3883 
+	depends on RALINK_RT2883 || RALINK_RT3883
 
-config  RT2860V2_80211N_DRAFT3
+config  RT2860V2_STA_80211N_DRAFT3
         bool "802.11n Draft3"
         depends on RT2860V2_STA
 
@@ -67,11 +67,11 @@ config  RT2860V2_80211N_DRAFT3
 #        bool "Extension Channel List"
 #        depends on RT2860V2_STA
 
-config  RT2860V2_SNMP
+config  RT2860V2_STA_SNMP
 	bool "Net-SNMP Support"
 	depends on RT2860V2_STA
 
-config RALINK_RT2880_STA_DBG
-        bool "Debug support for STA mode"
+config  RALINK_RT2860V2_STA_DBG
+	bool "Debug support for STA mode"
 	default n
 	depends on RT2860V2_STA
