--- a/trunk/.config
+++ b/trunk/.config
@@ -22,6 +22,10 @@ CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
 ### Also allow build image for load w/o flash from UART console
 #CONFIG_FIRMWARE_TYPE_ROOTFS_IN_RAM=y
 
+### Disable GMAC2 (eth3) for raeth.
+### LAN/WAN separated by VLAN1/2 (eth2.1/eth2.2)
+#CONFIG_FIRMWARE_USE_SINGLE_RGMII=y
+
 ### Perform sstrip for decrease firmware size (~50KB)
 #CONFIG_FIRMWARE_PERFORM_SSTRIP=y
 
