--- a/trunk/patches/rt3883-wifi/linux-2.6.21.x/drivers/net/wireless/rt2860v2_ap/Makefile
+++ b/trunk/patches/rt3883-wifi/linux-2.6.21.x/drivers/net/wireless/rt2860v2_ap/Makefile
@@ -210,7 +210,7 @@ endif
 
 ifeq ($(CONFIG_RALINK_RT3883),y)
 EXTRA_CFLAGS += -DRT3883 -DDOT11N_SS3_SUPPORT -DA_BAND_SUPPORT -DRTMP_RF_RW_SUPPORT
-EXTRA_CFLAGS += -DSPECIFIC_BCN_BUF_SUPPORT
+#EXTRA_CFLAGS += -DSPECIFIC_BCN_BUF_SUPPORT
 EXTRA_CFLAGS += -DRANGE_EXT_SUPPORT
 ifeq ($(CONFIG_RT2860V2_AP_TXBF),y)
 EXTRA_CFLAGS += -DTXBF_SUPPORT
