--- a/trunk/libs/libusb-1.0/libusb-1.0.8/Makefile.in
+++ b/trunk/libs/libusb-1.0/libusb-1.0.8/Makefile.in
@@ -254,7 +254,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = dist-bzip2 no-dist-gzip
-ACLOCAL_AMFLAGS = -I m4
+ACLOCAL_AMFLAGS =
 DISTCLEANFILES = ChangeLog libusb-1.0.pc
 EXTRA_DIST = TODO PORTING
 SUBDIRS = libusb doc $(am__append_1)
