--- a/trunk/configs/IPv4/kernel.config
+++ b/trunk/configs/IPv4/kernel.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux kernel version: 2.6.21.16
+# Linux kernel version: 2.6.21.17
 # Mon May 28 02:57:18 2012
 #
 CONFIG_MIPS=y
@@ -1600,9 +1600,10 @@ CONFIG_RT2860V2_AP_LED=y
 # CONFIG_RT2860V2_AP_WSC is not set
 CONFIG_RT2860V2_AP_LLTD=y
 CONFIG_RT2860V2_AP_WDS=y
-CONFIG_RT2860V2_AP_WMM_ACM=y
-# CONFIG_RT2860V2_AP_MBSS is not set
-# CONFIG_RT2860V2_AP_APCLI is not set
+# CONFIG_RT2860V2_AP_WMM_ACM is not set
+CONFIG_RT2860V2_AP_MBSS=y
+# CONFIG_RT2860V2_AP_MBSS_NEW_MBSSID_MODE is not set
+CONFIG_RT2860V2_AP_APCLI=y
 CONFIG_RT2860V2_AP_IGMP_SNOOP=y
 # CONFIG_RT2860V2_AP_NETIF_BLOCK is not set
 # CONFIG_RT2860V2_AP_DFS is not set
@@ -1613,7 +1614,6 @@ CONFIG_RT2860V2_AP_DLS=y
 # CONFIG_RT2860V2_AP_GREENAP is not set
 # CONFIG_RT2860V2_AP_MEMORY_OPTIMIZATION is not set
 CONFIG_RT2860V2_AP_VIDEO_TURBINE=y
-# CONFIG_RA_CLASSIFIER is not set
 CONFIG_RT2860V2_AP_INTELLIGENT_RATE_ADAPTION=y
 # CONFIG_RT2860V2_AP_TXBF is not set
 CONFIG_RT2860V2_AP_AUTO_CH_SELECT_ENHANCE=y
@@ -1638,8 +1638,9 @@ CONFIG_RT3090_AP_LED=y
 # CONFIG_RT3090_AP_WSC is not set
 CONFIG_RT3090_AP_LLTD=y
 CONFIG_RT3090_AP_WDS=y
-CONFIG_RT3090_AP_WMM_ACM=y
-# CONFIG_RT3090_AP_MBSS is not set
+# CONFIG_RT3090_AP_WMM_ACM is not set
+CONFIG_RT3090_AP_MBSS=y
+CONFIG_RT3090_AP_APCLI=y
 CONFIG_RT3090_AP_IGMP_SNOOP=y
 # CONFIG_RT3090_AP_NETIF_BLOCK is not set
 CONFIG_RT3090_AP_DLS=y
