--- a/trunk/patches/rt3883-wifi/linux-2.6.21.x/drivers/net/wireless/rt2860v2_ap/Makefile
+++ b/trunk/patches/rt3883-wifi/linux-2.6.21.x/drivers/net/wireless/rt2860v2_ap/Makefile
@@ -62,6 +62,10 @@ rt2860v2_ap-objs += ../rt2860v2/os/linux/rt_pci_rbus.o
 rt2860v2_ap-objs += ../rt2860v2/os/linux/rt_rbus_pci_util.o
 rt2860v2_ap-objs += ../rt2860v2/os/linux/rbus_main_dev.o
 
+ifeq ($(CONFIG_RT2860V2_AP_BRIDGE_FASTPATH),y)
+rt2860v2_ap-objs += ../rt2860v2/os/linux/br_ftph.o
+endif
+
 ifeq ($(CONFIG_RT2860V2_AP_WMM_ACM),y)
 rt2860v2_ap-objs += ../rt2860v2/common/acm_edca.o
 rt2860v2_ap-objs += ../rt2860v2/common/acm_comm.o
@@ -210,6 +214,7 @@ endif
 
 ifeq ($(CONFIG_RALINK_RT3883),y)
 EXTRA_CFLAGS += -DRT3883 -DDOT11N_SS3_SUPPORT -DA_BAND_SUPPORT -DRTMP_RF_RW_SUPPORT
+# use 8 beacons for RT3883
 #EXTRA_CFLAGS += -DSPECIFIC_BCN_BUF_SUPPORT
 EXTRA_CFLAGS += -DRANGE_EXT_SUPPORT
 ifeq ($(CONFIG_RT2860V2_AP_TXBF),y)
@@ -290,7 +295,7 @@ ifeq ($(CONFIG_RT2860V2_AP_MBSS),y)
 EXTRA_CFLAGS += -DMBSS_SUPPORT
 endif
 
-ifeq ($(CONFIG_NEW_MBSSID_MODE),y)
+ifeq ($(CONFIG_RT2860V2_AP_MBSS_NEW_MBSSID_MODE),y)
 EXTRA_CFLAGS += -DNEW_MBSSID_MODE
 endif
 
@@ -308,38 +313,37 @@ EXTRA_CFLAGS += -DBLOCK_NET_IF
 endif
 
 ifeq ($(CONFIG_RT2860V2_AP_ANTENNA_DIVERSITY),y)
-EXTRA_CFLAGS   += -DRT3XXX_ANTENNA_DIVERSITY_SUPPORT
+EXTRA_CFLAGS += -DRT3XXX_ANTENNA_DIVERSITY_SUPPORT
 endif
 
 ifeq ($(CONFIG_RT2860V2_AP_GREENAP),y)
-EXTRA_CFLAGS   += -DGREENAP_SUPPORT -DCOC_SUPPORT
+EXTRA_CFLAGS += -DGREENAP_SUPPORT -DCOC_SUPPORT
 endif
 
 ifeq ($(CONFIG_RT2860V2_AP_EXT_CHANNEL_LIST),y)
-EXTRA_CFLAGS   += -DEXT_BUILD_CHANNEL_LIST
+EXTRA_CFLAGS += -DEXT_BUILD_CHANNEL_LIST
 endif
 
 ifeq ($(CONFIG_RT2860V2_AP_KTHREAD),y)
-EXTRA_CFLAGS   += -DKTHREAD_SUPPORT
+EXTRA_CFLAGS += -DKTHREAD_SUPPORT
 endif
 
 ifeq ($(CONFIG_RT2860V2_AP_MEMORY_OPTIMIZATION),y)
-EXTRA_CFLAGS   += -DMEMORY_OPTIMIZATION
+EXTRA_CFLAGS += -DMEMORY_OPTIMIZATION
 endif
 
 ifeq ($(CONFIG_RT2860V2_AP_VIDEO_TURBINE),y)
-EXTRA_CFLAGS   += -DVIDEO_TURBINE_SUPPORT
+EXTRA_CFLAGS += -DVIDEO_TURBINE_SUPPORT
 endif
 
 ifeq ($(CONFIG_RA_NETWORK_WORKQUEUE_BH),y)
-EXTRA_CFLAGS   += -DWORKQUEUE_BH
+EXTRA_CFLAGS += -DWORKQUEUE_BH
 endif
 
 ifeq ($(CONFIG_RT2860V2_AP_INTELLIGENT_RATE_ADAPTION),y)
-EXTRA_CFLAGS   += -DNEW_RATE_ADAPT_SUPPORT
+EXTRA_CFLAGS += -DNEW_RATE_ADAPT_SUPPORT
 endif
 
 ifeq ($(CONFIG_RT2860V2_AP_BRIDGE_FASTPATH),y)
-EXTRA_CFLAGS +=  -DBG_FT_SUPPORT
-rt2860v2_ap-objs += ../rt2860v2/os/linux/br_ftph.o
+EXTRA_CFLAGS += -DBG_FT_SUPPORT
 endif
