--- a/trunk/.config
+++ b/trunk/.config
@@ -10,7 +10,7 @@ CONFIG_LINUXDIR=linux-2.6.21.x
 ### Firmware version
 CONFIG_FIRMWARE_KERNEL_VER="1.1"
 CONFIG_FIRMWARE_ROOTFS_VER="1.8f"
-CONFIG_FIRMWARE_BUILDS_VER="b8-2"
+CONFIG_FIRMWARE_BUILDS_VER="b9"
 CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
 
 ### Build firmware with shared libs for tcpdump, minidlna, transmission.
@@ -22,7 +22,7 @@ CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
 ### Also allow build image for load w/o flash from UART console
 #CONFIG_FIRMWARE_TYPE_ROOTFS_IN_RAM=y
 
-### Disable GMAC2 (eth3) for raeth.
+### Disable GMAC2 (eth3) for Ethernet raeth.
 ### LAN/WAN separated by VLAN1/2 (eth2.1/eth2.2)
 #CONFIG_FIRMWARE_USE_SINGLE_RGMII=y
 
