--- a/trunk/.config
+++ b/trunk/.config
@@ -9,8 +9,8 @@ CONFIG_LINUXDIR=linux-2.6.21.x
 
 ### Firmware version
 CONFIG_FIRMWARE_KERNEL_VER="1.1"
-CONFIG_FIRMWARE_ROOTFS_VER="1.8f"
-CONFIG_FIRMWARE_BUILDS_VER="b9"
+CONFIG_FIRMWARE_ROOTFS_VER="2.0"
+CONFIG_FIRMWARE_BUILDS_VER="001"
 CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
 
 ### Build firmware with shared libs for tcpdump, minidlna, transmission.
@@ -20,7 +20,7 @@ CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
 ### Build ROOTFS_IN_RAM firmware mode (kernel+initramfs).
 ### Decreased firmware size, but more RAM used, slow boot.
 ### Also allow build image for load w/o flash from UART console
-#CONFIG_FIRMWARE_TYPE_ROOTFS_IN_RAM=y
+CONFIG_FIRMWARE_TYPE_ROOTFS_IN_RAM=y
 
 ### Disable GMAC2 (eth3) for Ethernet raeth.
 ### LAN/WAN separated by VLAN1/2 (eth2.1/eth2.2)
