--- a/trunk/.config
+++ b/trunk/.config
@@ -20,7 +20,7 @@ CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
 ### Build ROOTFS_IN_RAM firmware mode (kernel+initramfs).
 ### Decreased firmware size, but more RAM used, slow boot.
 ### Also allow build image for load w/o flash from UART console
-CONFIG_FIRMWARE_TYPE_ROOTFS_IN_RAM=y
+#CONFIG_FIRMWARE_TYPE_ROOTFS_IN_RAM=y
 
 ### Disable GMAC2 (eth3) for Ethernet raeth.
 ### LAN/WAN separated by VLAN1/2 (eth2.1/eth2.2)
