xl2tpd: fix incoming ZLB after call closed, disable TRUST_PPPD_TO_DIE

--- a/trunk/user/xl2tpd/Makefile
+++ b/trunk/user/xl2tpd/Makefile
@@ -57,7 +57,7 @@
 # DFLAGS= -g -DDEBUG_HELLO -DDEBUG_CLOSE -DDEBUG_FLOW -DDEBUG_PAYLOAD -DDEBUG_CONTROL -DDEBUG_CONTROL_XMIT -DDEBUG_FLOW_MORE -DDEBUG_MAGIC -DDEBUG_ENTROPY -DDEBUG_HIDDEN -DDEBUG_PPPD -DDEBUG_AAA -DDEBUG_FILE -DDEBUG_FLOW -DDEBUG_HELLO -DDEBUG_CLOSE -DDEBUG_ZLB -DDEBUG_AUTH
 # DFLAGS?= -DDEBUG_PPPD -DTRUST_PPPD_TO_DIE
 
-DFLAGS= -g -DTRUST_PPPD_TO_DIE -DFIX_ZLB
+DFLAGS= -g -DFIX_ZLB
 
 # Uncomment the next line for Linux. KERNELSRC is needed for if_pppol2tp.h,
 # but we use a local copy if we don't find it.
