vsftpd: update from asus firmware 1.0.1.8g

--- a/trunk/user/vsftpd/Makefile
+++ b/trunk/user/vsftpd/Makefile
@@ -18,7 +18,7 @@ OBJS	=	main.o utility.o prelogin.o ftpcmdio.o postlogin.o privsock.o \
 		postprivparent.o logging.o str.o netstr.o sysstr.o strlist.o \
 		banner.o filestr.o parseconf.o secutil.o \
 		ascii.o oneprocess.o twoprocess.o privops.o standalone.o hash.o \
-		tcpwrap.o ipaddrparse.o access.o features.o readwrite.o \
+		tcpwrap.o ipaddrparse.o access.o features.o readwrite.o opts.o \
 		ssl.o sysutil.o sysdeputil.o
 
 all:	$(OBJS)
