vpn server: add user ACL control to WebGUI, update nvram vars

--- a/trunk/.config
+++ b/trunk/.config
@@ -35,7 +35,7 @@ CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
 ### Use L2TP client "rp-l2tp" instead of "xl2tpd"
 #CONFIG_FIRMWARE_USE_RPL2TP=y
 
-### Select WebGUI (0=Ribbon from eagle23, 1=ASUS Blue)
+### Select WebGUI (0=Ribbon Fixed, 1=Ribbon, 2=ASUS Blue)
 CONFIG_FIRMWARE_WEBGUI=0
 
 ### Include WebGUI international resources. Increased firmware size
