--- a/trunk/user/rc/Makefile
+++ b/trunk/user/rc/Makefile
@@ -25,7 +25,7 @@ RPL2TP = $(if $(CONFIG_FIRMWARE_USE_RPL2TP),-DUSE_RPL2TP,)
 PHYMAC = $(if $(CONFIG_RAETH_GMAC2),,-DUSE_SINGLE_MAC)
 RT3883 = $(if $(CONFIG_RALINK_RT3883_3T3R),-DUSE_RT3883_3T3R,)
 
-CFLAGS += -s -DASUS_NVRAM -DRPPPPOE -DWL500GP -DDHCP_PPTP -DASUS_EXT -DASUS_DDNS -DGUEST_ACCOUNT -DWEBSTRFILTER -DUSB_SUPPORT -DU2EC -DDLM -DPRINTER_SUPPORT -DCONTENTFILTER
+CFLAGS += -s -DASUS_NVRAM -DRPPPPOE -DWL500GP -DDHCP_PPTP -DASUS_EXT -DASUS_DDNS -DGUEST_ACCOUNT -DWEBSTRFILTER -DUSB_SUPPORT -DU2EC -DDLM -DPRINTER_SUPPORT
 CFLAGS += -I. -I$(SHDIR) -I$(SHDIR)/include -I$(HTTPDIR)
 CFLAGS += $(FWBLDV)
 CFLAGS += $(RPL2TP)
