--- a/trunk/linux-2.6.21.x/drivers/nvram/Kconfig
+++ b/trunk/linux-2.6.21.x/drivers/nvram/Kconfig
@@ -2,6 +2,7 @@ menu "ASUS NVRAM"
 
 config	ASUS_NVRAM_API
 	tristate "ASUS NVRAM R/W API"
+	depends on MTD_RALINK
 	default y
 	---help---
 	ASUS NVRAM R/W API
