--- a/trunk/user/rc/Makefile
+++ b/trunk/user/rc/Makefile
@@ -24,13 +24,15 @@ FWBLDV = $(if $(CONFIG_FIRMWARE_BUILDS_VER),-DFWBLDSTR=\"$(CONFIG_FIRMWARE_BUILD
 RPL2TP = $(if $(CONFIG_FIRMWARE_USE_RPL2TP),-DUSE_RPL2TP,)
 PHYMAC = $(if $(CONFIG_RAETH_GMAC2),,-DUSE_SINGLE_MAC)
 RT3883 = $(if $(CONFIG_RALINK_RT3883_3T3R),-DUSE_RT3883_3T3R,)
+DOIPV6 = $(if $(CONFIG_IPV6),-DUSE_IPV6,)
 
-CFLAGS += -s -DASUS_NVRAM -DRPPPPOE -DWL500GP -DDHCP_PPTP -DASUS_EXT -DASUS_DDNS -DGUEST_ACCOUNT -DWEBSTRFILTER -DUSB_SUPPORT -DU2EC -DDLM -DPRINTER_SUPPORT
+CFLAGS += -s -DASUS_NVRAM -DWL500GP -DASUS_EXT -DASUS_DDNS -DWEBSTRFILTER -DU2EC
 CFLAGS += -I. -I$(SHDIR) -I$(SHDIR)/include -I$(HTTPDIR)
 CFLAGS += $(FWBLDV)
 CFLAGS += $(RPL2TP)
 CFLAGS += $(PHYMAC)
 CFLAGS += $(RT3883)
+CFLAGS += $(DOIPV6)
 
 # Disable/Enable WPS button event
 CFLAGS += -DWPS_EVENT
