kernel config: disable V4L1 compat for Video4Linux

--- a/trunk/configs/IPv6/kernel.ram.config
+++ b/trunk/configs/IPv6/kernel.ram.config
@@ -1069,8 +1069,8 @@ CONFIG_GEN_RTC_X=y
 # Multimedia devices
 #
 CONFIG_VIDEO_DEV=m
-CONFIG_VIDEO_V4L1=y
-CONFIG_VIDEO_V4L1_COMPAT=y
+# CONFIG_VIDEO_V4L1 is not set
+# CONFIG_VIDEO_V4L1_COMPAT is not set
 CONFIG_VIDEO_V4L2=y
 
 #
@@ -1085,23 +1085,10 @@ CONFIG_USB_VIDEO_CLASS=m
 # CONFIG_VIDEO_ADV_DEBUG is not set
 CONFIG_VIDEO_HELPER_CHIPS_AUTO=y
 # CONFIG_VIDEO_VIVI is not set
-# CONFIG_VIDEO_CPIA is not set
-# CONFIG_VIDEO_CPIA2 is not set
 
 #
 # V4L USB devices
 #
-CONFIG_VIDEO_USBVIDEO=m
-# CONFIG_USB_IBMCAM is not set
-# CONFIG_USB_KONICAWC is not set
-CONFIG_USB_QUICKCAM_MESSENGER=m
-# CONFIG_USB_ET61X251 is not set
-# CONFIG_USB_OV511 is not set
-# CONFIG_USB_SE401 is not set
-# CONFIG_USB_SN9C102 is not set
-# CONFIG_USB_STV680 is not set
-# CONFIG_USB_ZC0301 is not set
-# CONFIG_USB_PWC is not set
 
 #
 # Radio Adapters
