ddns: moved Asus DDNS code from ez-ipupdate to inadyn, remove depricated ez-ipupdate, update URL for tunnelbroker.net, limited inadyn iterations on update error

--- a/trunk/user/httpd/Makefile
+++ b/trunk/user/httpd/Makefile
@@ -7,7 +7,7 @@ DOIPV6 = $(if $(CONFIG_IPV6),-DUSE_IPV6,)
 
 CFLAGS += -I. -I$(SHDIR) -I$(SHDIR)/include -I$(USERDIR)/libdisk -I$(USERDIR)/iptables/include -I$(USERDIR)/wireless_tools
 CFLAGS += -I$(LINUXINCDIR)
-CFLAGS += -Wall -DASUS_DDNS -DTRANSLATE_ON_FLY
+CFLAGS += -Wall -DTRANSLATE_ON_FLY
 CFLAGS += $(DOIPV6)
 
 LDFLAGS	= -L$(SHDIR) -L$(USERDIR)/libdisk -L$(USERDIR)/iptables/libiptc -L$(USERDIR)/wireless_tools
