--- a/trunk/user/rc/Makefile
+++ b/trunk/user/rc/Makefile
@@ -26,8 +26,7 @@ PHYMAC = $(if $(CONFIG_RAETH_GMAC2),,-DUSE_SINGLE_MAC)
 RT3883 = $(if $(CONFIG_RALINK_RT3883_3T3R),-DUSE_RT3883_3T3R,)
 DOIPV6 = $(if $(CONFIG_IPV6),-DUSE_IPV6,)
 
-CFLAGS += -s -DASUS_EXT -DASUS_DDNS -DWEBSTRFILTER -DU2EC
-CFLAGS += -I. -I$(SHDIR) -I$(SHDIR)/include -I$(HTTPDIR)
+CFLAGS += -s -I. -I$(SHDIR) -I$(SHDIR)/include -I$(HTTPDIR)
 CFLAGS += $(FWBLDV)
 CFLAGS += $(RPL2TP)
 CFLAGS += $(PHYMAC)
