--- a/trunk/libs/libcurl/Makefile
+++ b/trunk/libs/libcurl/Makefile
@@ -17,7 +17,7 @@ configure:
 		--prefix=/ \
 		$(if $(CONFIG_LIB_BUILD_SHARED),--disable-static,--enable-static) \
 		$(if $(CONFIG_LIB_BUILD_SHARED),--enable-shared,--disable-shared) \
-		$(if $(CONFIG_FIRMWARE_ENABLE_IPV6),--enable-ipv6,--disable-ipv6) \
+		$(if $(CONFIG_IPV6),--enable-ipv6,--disable-ipv6) \
 		--disable-gopher \
 		--disable-ldap \
 		--disable-rtsp \
