update pppd kernel headers

--- a/trunk/user/pppd/pppd/plugins/Makefile.linux
+++ b/trunk/user/pppd/pppd/plugins/Makefile.linux
@@ -1,4 +1,3 @@
-#CC	= gcc
 COPTS	= -O2 -g
 CFLAGS	= $(COPTS) -I.. -I../../include -fPIC
 LDFLAGS	= -shared
@@ -11,7 +10,7 @@ LIBDIR = $(DESTDIR)/lib/pppd/$(VERSION)
 
 SUBDIRS := rp-pppoe pppoatm pppol2tp pptp
 # Uncomment the next line to include the radius authentication plugin
-SUBDIRS += radius
+#SUBDIRS += radius
 PLUGINS := minconn.so passprompt.so passwordfd.so winbind.so
 
 # include dependencies if present
