--- a/trunk/user/pppd/pppd/plugins/pppol2tp/Makefile.linux
+++ b/trunk/user/pppd/pppd/plugins/pppol2tp/Makefile.linux
@@ -1,6 +1,5 @@
-#CC	= gcc
 COPTS	= -O2 -g
-CFLAGS	= $(COPTS) -I. -I../.. -I$(LINUXDIR)/include -fPIC
+CFLAGS	= $(COPTS) -I. -I../.. -I../../../include -fPIC
 LDFLAGS	= -shared
 INSTALL	= install
 
