--- a/trunk/user/utils/hw_nat/Makefile
+++ b/trunk/user/utils/hw_nat/Makefile
@@ -4,12 +4,11 @@ HWNAT_OBJS = hw_nat.o hwnat_api.o util.o
 AC_OBJS = ac.o ac_api.o util.o
 ACL_OBJS = acl.o acl_api.o util.o
 MTR_OBJS = mtr.o mtr_api.o util.o
-CONF_H  = $(ROOTDIR)/$(LINUXDIR)/include/linux/autoconf.h
-CFLAGS += -I$(ROOTDIR)/$(LINUXDIR)/net/nat/hw_nat 
+CFLAGS += -I$(ROOTDIR)/$(LINUXDIR)/net/nat/hw_nat -I$(ROOTDIR)/$(LINUXDIR)/include
 
 all: $(EXEC)
 
-hw_nat: $(HWNAT_OBJS) $(CONF_H)
+hw_nat: $(HWNAT_OBJS)
 	$(CC) $(LDFLAGS) -o $@ $(HWNAT_OBJS) 
 
 acl: $(ACL_OBJS)
