--- a/trunk/libs/libcurl/Makefile
+++ b/trunk/libs/libcurl/Makefile
@@ -41,8 +41,11 @@ configure:
 		--build=$(HOST_BUILD) ; \
 	)
 
+
 clean:
-	$(MAKE) -C $(SRC_NAME) distclean; \
+	if [ -f $(SRC_NAME)/Makefile ] ; then \
+		$(MAKE) -C $(SRC_NAME) distclean ; \
+	fi ; \
 	rm -f config_done
 
 install:
