--- a/trunk/user/transmission/Makefile
+++ b/trunk/user/transmission/Makefile
@@ -1,9 +1,6 @@
 SRC_NAME=transmission-2.61
 
-# fix __cxa_atexit for libutp
-CXXFLAGS += -fno-use-cxa-atexit
-
-CFLAGS   += -ffunction-sections -fdata-sections -Wl,--gc-sections -D_LARGEFILE64_SOURCE
+CFLAGS   += -ffunction-sections -fdata-sections -D_LARGEFILE64_SOURCE
 LDFLAGS  += -Wl,--gc-sections
 
 THISDIR = $(shell pwd)
